--- a/src/components/ConnectModal/ConnectModal.module.scss
+++ b/src/components/ConnectModal/ConnectModal.module.scss
@@ -18,7 +18,7 @@
   }
 
   .container {
-    max-width: 508px;
+    max-width: 600px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -49,23 +49,31 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-    .button {
-      padding: 20px 0;
-      margin: 0 auto 30px auto;
-      border: 1px solid black;
+    .buttonContainer {
+      background: $gradient90deg;
+      padding: 3px 3px 3px 3px;
       display: flex;
-      align-items: center;
-      background-color: #fff;
-      width: 45%;
       justify-content: center;
+      align-items: center;
       border-radius: 139px;
-      cursor: pointer;
+      
+      margin: 0 auto 30px auto;
 
-      .buttonText {
-        @include gradientText90deg;
-        font-weight: 900;
-        font-size: 18px;
-        line-height: 24px;
+      .buttonContainer2 {
+        border-radius: 50px;
+        border: none;
+        display: flex;
+        align-items: center;
+        background: #fff;
+        justify-content: center;
+        cursor: pointer;
+        padding: 28px 46px;
+        .buttonText {
+          @include gradientText90deg;
+          font-weight: 900;
+          font-size: 18px;
+          line-height: 24px;
+        }
       }
     }
   }
@@ -104,6 +112,16 @@
     }
   }
 
+  @media screen and (max-width: 650px) {
+    .actions {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+  }
+
+
   @media screen and (max-width: 400px) {
     .heading {
       font-size: 32px;
@@ -126,8 +144,10 @@
 .paper {
   border-radius: 60px !important;
   // max-width: calc(100%-32px) !important;
-  max-width: calc(100% - 32px) !important;
-  width: calc(100% - 32px) !important;
-  margin-left: 16px !important;
-  margin-right: 16px !important;
+  @media screen and (max-width: 100px) {
+    max-width: calc(100% - 32px) !important;
+    width: calc(100% - 32px) !important;
+    margin-left: 16px !important;
+    margin-right: 16px !important;
+  }
 }
