--- a/src/pages/Auction/Auction.module.scss
+++ b/src/pages/Auction/Auction.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+
 .container {
   width: 100%;
   display: flex;
@@ -84,6 +85,7 @@
       width: 100%;
       .button {
         width: 100%;
+        justify-content: center;
       }
     }
   }
