--- a/src/components/Girl/Girl.module.scss
+++ b/src/components/Girl/Girl.module.scss
@@ -11,6 +11,10 @@
     height: 100%;
 
   }
+  .girlImgM{
+    height: 100%;
+    display: none;
+  }
   }
   .rocket {
     position: absolute;
@@ -40,4 +44,15 @@
       }
     }
   }
+}
+
+@media screen and (max-width: 390px) {
+    .girlContainer{
+      .girlImg{
+        display: none;
+      }
+      .girlImgM{
+        display: initial !important;
+      }
+    }
 }
